[package]
name = "poker"
version = "0.1.0"
edition = "2021"

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
num-format = "0.4.4"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"], optional = true }
serde_big_array = { version = "0.5.1", optional = true, package = "serde-big-array" }
# serde_json = "1.0.111"

[features]
serde = ["dep:serde", "dep:serde_big_array"]
# serde-big-array = ["dep:serde"]


[profile.release]
strip = true
