[package]
name = "poker_eval"
version = "0.1.0"
edition = "2021"
authors = ["oscar6echo"]
license = "MIT"
description = "Texas Hold'em poker hand equity evaluator"
# documentation = ""
# homepage = ""
repository = "https://github.com/oscar6echo/poker5"
readme = "README.md"
keywords = ["poker", "equity", "monte-carlo"]
categories = ["games"]

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
num-format = "0.4.4"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"], optional = true }
serde_big_array = { version = "0.5.1", optional = true, package = "serde-big-array" }

[features]
serde = ["dep:serde", "dep:serde_big_array"]

[profile.release]
strip = true
lto = true
codegen-units = 1
