[package]
name = "poker_keygen"
version = "0.1.0"
edition = "2021"
authors = ["oscar6echo"]
license = "MIT"
description = "Texas Hold'em poker key generator"
# documentation = ""
# homepage = ""
repository = "https://github.com/oscar6echo/poker5"
readme = "README.md"
keywords = ["poker", "key-gen"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
