[package]
name = "poker_server"
version = "0.1.0"
edition = "2021"
authors = ["oscar6echo"]
license = "MIT"
description = "Texas Hold'em poker hand equity web server"
# documentation = ""
# homepage = ""
repository = "https://github/oscar6echo/poker5"
readme = "README.md"
keywords = ["poker", "texas hold'em", "hand evaluator", "web server"]
categories = ["web-programming::http-server"]

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker_eval = { path = "../poker_eval", version = "0.1.0", features = ["serde"] }
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.56"

[profile.release]
strip = true
lto = true
codegen-units = 1
